--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,11 +20,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
       - name: Grab Ghidra Release
         run: wget https://ghidra-sre.org/ghidra_9.2.2_PUBLIC_20201229.zip -o /tmp/ghidra.zip
       - name: Unzip Ghidra Release
         run: unzip /tmp/ghidra.zip -d /tmp
       - name: Build with Gradle
+        working-directory: ./GhidraJupyterKotlin
         run: gradle -PGHIDRA_INSTALL_DIR=/tmp/ghidra_9.2.2_PUBLIC/ buildExtension
