--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,9 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Test
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -24,18 +22,6 @@ jobs:
         with:
                 version: "9.2.2"
 
-      - name: Build with Gradle
+      - name: Test Extension
         working-directory: ./GhidraJupyterKotlin
-        run: gradle buildExtension
-
-      - name: Debug github.ref
-        run: echo ${{github.ref}}
-
-      - name: Publish prerelease for commit
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: ./GhidraJupyterKotlin/dist/*zip
-          prerelease: github.ref != 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gradle buildExtension # For now this is the best we can do in terms of testing
