--- a/GhidraJupyterKotlin/build.gradle
+++ b/GhidraJupyterKotlin/build.gradle
@@ -14,6 +14,10 @@
 // application.gradle.version property in <GHIDRA_INSTALL_DIR>/Ghidra/application.properties
 // for the correction version of Gradle to use for the Ghidra installation you specify.
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+}
+
 configurations {
     requiredLibs //.extendsFrom implementation
 }
@@ -47,7 +51,8 @@ else {
 //----------------------END "DO NOT MODIFY" SECTION-------------------------------
 
 dependencies {
-	requiredLibs('org.jetbrains.kotlinx:kotlin-jupyter-kernel:0.8.3.248'){ exclude group: "org.slf4j", module: "slf4j-api" }
+	requiredLibs('org.jetbrains.kotlinx:kotlin-jupyter-kernel:0.9.0-32-1'){ exclude group: "org.slf4j", module: "slf4j-api" }
+	compile group: 'org.json', name: 'json', version: '20210307'
 }
 
 task copyDependencies(type: Copy) {
