--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,3 +31,11 @@ jobs:
 
       - name: Test Kernel Startup # Test if the kernel manages to not crash before the timeout terminates it
         run: timeout 5s $GHIDRA_INSTALL_DIR/support/launch.sh fg Ghidra '' '' GhidraJupyterKotlin.GhidraKotlinKernelLaunchable .github/workflows/test-kernel-config.json || exit $(($?-124))
+
+      - name: Install jupyter-console for testing evaluation
+        run: sudo apt-get install jupyter-console
+        
+      - name: Test basic evaluation
+        run: |
+                echo "1+1" | jupyter-console --existing=.github/workflows/test-kernel-config.json &
+                timeout 10s $GHIDRA_INSTALL_DIR/support/launch.sh fg Ghidra '' '' GhidraJupyterKotlin.GhidraKotlinKernelLaunchable .github/workflows/test-kernel-config.json || exit $(($?-124)) 
