Use my forked version of setup-ghidra
Regular setup-ghidra action doesn't handle the new Ghidra 10 releases
that are directly on github. My fork supports a direct link to the zip
which serves as a stopgap measure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - uses: er28-0652/setup-ghidra@master
+      - uses: fmagin/setup-ghidra@directLink
         with:
           version: "10.0.1"
+          directLink: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.1_build/ghidra_10.0.1_PUBLIC_20210708.zip
 
       - name: Build with Gradle
         working-directory: ./GhidraJupyterKotlin
