Compile KtScripts via embedded compiler

--- a/GhidraJupyterKotlin/build.gradle
+++ b/GhidraJupyterKotlin/build.gradle
@@ -15,7 +15,8 @@
 // for the correction version of Gradle to use for the Ghidra installation you specify.
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+	id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
+	id 'idea'
 }
 
 configurations {
@@ -28,7 +29,6 @@ configurations {
 				dirs 'lib'
 			}
 			mavenCentral()
-			jcenter()
 
 		}
 
@@ -52,7 +52,11 @@ else {
 
 dependencies {
 	requiredLibs('org.jetbrains.kotlinx:kotlin-jupyter-kernel:0.9.1-8-1'){ exclude group: "org.slf4j", module: "slf4j-api" }
+	// Needed for compiling
+	// after building they are already included as part of the recursive dependencies of kotlin-jupyter-kernel
+	api group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: "$kotlinVersion"
 	compile group: 'org.json', name: 'json', version: '20210307'
+	api group: 'org.zeromq', name: 'jeromq', version: '0.5.2'
 }
 
 task copyDependencies(type: Copy) {
