--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,10 +18,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - uses: fmagin/setup-ghidra@directLink
+      - uses: er28-0652/setup-ghidra@master
         with:
                 version: "10.0.2"
-                directLink: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.1_build/ghidra_10.0.1_PUBLIC_20210708.zip
 
       - name: Build Extension
         working-directory: ./GhidraJupyterKotlin
