--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - uses: fmagin/setup-ghidra@directLink
+      - uses: er28-0652/setup-ghidra@master
         with:
           version: "10.0.2"
-          directLink: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.1_build/ghidra_10.0.1_PUBLIC_20210708.zip
 
       - name: Build with Gradle
         working-directory: ./GhidraJupyterKotlin
