--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 1.11
       - uses: er28-0652/setup-ghidra@master
         with:
-          version: "10.0.2"
+          version: "10.1-BETA"
 
       - name: Build with Gradle
         working-directory: ./GhidraJupyterKotlin
