--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 1.11
       - uses: er28-0652/setup-ghidra@master
         with:
-                version: "10.1-BETA"
+                version: "10.1"
 
       - name: Build Extension
         working-directory: ./GhidraJupyterKotlin
