--- a/GhidraJupyterKotlin/build.gradle
+++ b/GhidraJupyterKotlin/build.gradle
@@ -61,5 +61,14 @@ dependencies {
 	api group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: "$kotlinVersion"
 	api group: 'org.json', name: 'json', version: '20210307'
 	api group: 'org.zeromq', name: 'jeromq', version: '0.5.2'
+	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
 }
 buildExtension.dependsOn(copyDependencies)
+
+sourceSets {
+	main {
+		kotlin {
+			srcDirs 'ghidra_scripts'
+		}
+	}
+}
