Fix CI check of KotlinScriptProvider

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Test support for .kt Scripts
         run: |
-          $GHIDRA_INSTALL_DIR/support/analyzeHeadless /tmp tmp -readonly -preScript $GITHUB_WORKSPACE/GhidraJupyterKotlin/ghidra_scripts/HelloWorldScriptKt.kt | grep "INFO  HelloWorldScriptKt.kt> Hello, Kotlin! (GhidraScript)"
+          $GHIDRA_INSTALL_DIR/support/analyzeHeadless /tmp tmp -readonly -preScript $GITHUB_WORKSPACE/GhidraJupyterKotlin/ghidra_scripts/HelloWorldScriptKt.kt | grep "HelloWorldScriptKt.kt> Hello in Kotlin from null! (GhidraScript)"
