--- a/GhidraJupyterKotlin/build.gradle
+++ b/GhidraJupyterKotlin/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 	api group: 'org.zeromq', name: 'jeromq', version: '0.5.2'
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
 }
+compileKotlin.dependsOn(copyDependencies)
 buildExtension.dependsOn(copyDependencies)
 
 sourceSets {
