--- a/.github/workflows/release-python-test.yml
+++ b/.github/workflows/release-python-test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-tags: true
+          fetch-depth: 0
       - uses: hynek/build-and-inspect-python-package@v2
         with:
             path: "ghidra_jupyter"
