Use guessed dynamic version

--- a/ghidra_jupyter/pyproject.toml
+++ b/ghidra_jupyter/pyproject.toml
@@ -30,7 +30,7 @@ build-backend = "hatchling.build"
 [tool.hatch.version]
 source = "vcs"
 [tool.hatch.version.raw-options]
-version_scheme = "no-guess-dev"
+version_scheme = "guess-next-dev"
 root = ".."
 
 
